<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FilePlayer</string>
    <string name="action_settings">Settings</string>
    <string name="Sdcard_is_not_available">Sdcard is not Avaiable</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>
    <string name="please_wait">Please Wait!</string>
    <string name="download_successfully">ダウンロード成功</string>
    <string name="file_downloaded">This file has been downloaded.</string>
    <string name="load_webpage_fail">ウェブページがロードに失敗しました。</string>
    <string name="fileplayer_existed">既にFilePlayerアプリを開いています。</string>

    <!-- activity top -->
    <string name="title">入門ビジネス英語</string>
    <string name="course_intro">講座紹介</string>
    <string name="buy">購入する</string>
    <string name="learn">学習する</string>
    <string name="same_data">!以下同様 </string>
    <string name="add_dummy_data">Please wait for adding dummy data.</string>
    <string name="change_filename">ファイル名を更新</string>

    <!-- TopActivity -->
    <string name="file_list">ファイル一覧</string>

    <!-- DisplayActivity -->
    <string name="title_name">入門ビジネス英語 
        2013年12月</string>
    <string name="run_function">機能を指定して実行</string>
    <string name="browser_start">ブラウザ起動</string>
    <string name="list_file">ファイル一覧へ</string>
    <string name="list_audio">音声ファイル選択</string>
    <string name="select_show_file">表示ファイル選択</string>
    <string name="sort_title">タイトル順</string>
    <string name="sort_download_time">DL日順</string>
    <string name="create_delete_folder">フォルダ作成/移動</string>
    <string name="no_audio">NO AUDIO</string>
    <string name="documents">Documents</string>
    <string name="select_all">全て選択</string>
    <string name="new_folder">フォルダ作成</string>
    <string name="change_name">ファイル名を更新</string>
    <string name="move">移動</string>
    <string name="paste_items">Paste Items</string>
    <string name="move_items_here">アイテム移動</string>
    <string name="de_seselect">全て選択解除</string>
    <string name="delete">削除</string>
    <string name="action">アクション</string>
    <string name="done">完成</string>
    <string name="create_a_folder">フォルダ作成</string>
    <string name="input_name">Input Name</string>
    <string name="data_can_be_displayed">データ表示可能</string>
    <string name="no_matching_data">対応するデータがありません</string>
    <string name="back_to_playback_screen">再生画面に戻る</string>
    <string name="back">戻る</string>
    <string name="rate">00/00</string>
    <string name="no_item_selected">選択されたアイテムがありません</string>
    <string name="items_selected">選択されたアイテムが。。。	</string>
    <string name="enter_folder_name">フォルダ名を入力してください</string>
    <string name="error_cannot_move_to_this_folder">エラー
        このフォルダにファイルを移動できません。他のフォルダを選択してください。</string>
    <string name="error_when_create_folder_maybe_this_folder_already_exist">フォルダ作成時にエラーが出ています。このフォルダ名が既に存在しているかもしれません。	</string>
    <string name="download_failed">ファイルのダウンロードに失敗しました</string>
    <string name="downloading_file_please_wait">ダウンロード中</string>
    <string name="this_file_have_been_download">このファイルは既にダウンロードされました。</string>
    <string name="are_you_sure_delete_folder">選択されたアイテムを削除しますか？</string>
    <string name="dismiss">OK</string>
    <string name="item_selected">アイテムが選択された</string>
    <string name="please_wait_decrypting">ファイルを開いています</string>
    <string name="save_this_link">Save this Link</string>
    <string name="show_book_mark">Show Book Marks</string>

    <!-- book mark list -->
    <string name="book_mark_list">Book Mark List</string>
    <string name="name">Name</string>
    <string name="link_url">Link Url</string>
    <string name="folder_process">フォルダの整理</string>
    <string name="book_mark">ブックマークしました</string>
    <string name="book_mark_signed">既にブックマークに登録されています</string>
    <string name="checking_exist">存在チェック</string>
    <string name="file_is_exist">ファイルが存在しました</string>
    <string name="search">Search</string>
    <!-- NETWORK -->
    <string name="not_connect_to_network">Not connect to Network</string>
    <string name="please_input_name">フォルダ名を入力してください</string>
    <string name="folder_exist">Folder existed</string>
    <string name="load_web">ロード ウェブ</string>

</resources>