<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imgDeleteItemId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/small_padding"
        android:src="@drawable/presence_busy" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvNameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_padding"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLinkUrlId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_padding"
            android:text="@string/link_url" />
    </LinearLayout>

</LinearLayout>